# SynMix

./: .gitignore  CLAUDE.md  LICENSE  README.md  global_context.py  main.py  pyproject.toml  screen.py  urls_references_for_shaders.md
config/: fake_midi_key_map.json  scenes_order.json
fakemidi/: fakemidi.py  test_fake_midi.py
inputs/: buttons.py  input_manager.py  inputmanager.py  midi.py
params/: params.py  valuecontrollers.py
resources/: fake_midi_key_map.json  glsl.md
resources/scenes/: UFO_Blanket.toml  bridge_flower.toml  cbs_galaxy.toml  desert_dunes.toml  flappy_bird.toml  flower_mandala.toml  julia.toml  kepler_planet.toml  laser_beam.toml  mandelbrot_set.toml  menger_fall.toml  neon_kaleidoscope.toml  post_processing_params.toml  quaternion_fractal.toml  test.toml  triskelion.toml  wings_fractal.toml  worm_mandala.toml
resources/shaders/: UFO_Blanket.glsl  bridge_flower.glsl  cbs_galaxy.glsl  flappy_bird.glsl  flower_mandala.glsl  julia.glsl  kepler.glsl  laser_beam.glsl  mandelbrot_set.glsl  menger_fall.glsl  neon_kaleidoscope.glsl  post_processing.glsl  quaternion_fractal.glsl  test.glsl  triskelion.glsl  wings.glsl  worm_mandala.glsl
scenes/: Deadmau5Fractal.toml  __init__.py  deadmau5_fractal.py  desert_dunes.toml  kepler_planet.py  kepler_planet.toml  post_processing_params.py  post_processing_params.toml  quaternion_fractal.toml  scene.py  scenes_manager.py  wings_fractal.toml
scripts/: test_fake_controller.py  test_fake_midi.py
shaders/: cbs_galaxy.glsl  desert_dunes.glsl  fract0.glsl  kepler.glsl  post_processing.glsl  vertex.glsl  wings.glsl
src/synmix/: __init__.py  __main__.py  resource_loader.py
src/synmix/fakemidi/: __init__.py  fakemidi.py
src/synmix/inputs/: __init__.py  buttons.py  input_manager.py  midi.py
src/synmix/params/: __init__.py  params.py  valuecontrollers.py
src/synmix/resources/: fake_midi_key_map.toml  scenes_order.json  scenes_order.toml
src/synmix/resources/scenes/: desert_dunes.toml  laser_beam.toml  post_processing_params.toml  worm_mandala.toml
src/synmix/resources/shaders/: cbs_galaxy.glsl  desert_dunes.glsl  flappy_bird.glsl  flower_mandala.glsl  julia.glsl  kepler.glsl  menger_fall.glsl  wings.glsl
src/synmix/scenes/: __init__.py  scene.py  scenes_manager.py
src/synmix/top_level/: __init__.py  global_context.py  screen.py
tests/: __init__.py  test_fake_midi.py
top_level/: global_context.py  screen.py
utils/: fakecontroller.py  fakemidi.py
