[project]
name = "synmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "ipdb>=0.13.13",
    "mido>=1.3.3",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.3.2",
    "python-rtmidi>=1.5.8",
]
