[project]
name = "synmix"
version = "0.1.0"
description = "Real-time visual synthesis application with MIDI control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "ipdb>=0.13.13",
    "mido>=1.3.3",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.3.2",
    "Pillow>=10.0.0",
    "python-rtmidi>=1.5.8",
]

[project.scripts]
synmix = "synmix.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synmix"]

[tool.hatch.build.targets.wheel.force-include]
"src/synmix/resources" = "synmix/resources"

[tool.pyright]
venvPath = "."
venv = ".venv"
